make sure it's responsive on small screen's

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   height: 100vh;
+  width: 100%;
   background: #121826;
 }
 
@@ -25,7 +26,9 @@ body {
   display: flex;
   flex-direction: column;
   width: 480px;
+  max-width: 100%;
   margin: 60px auto;
+  min-width: 300px;
   align-items: center;
 }
 h2 {
